00.homepage/01.static/kubernetes/06.homepage-nginx__Ingress.yaml

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: oci-devops
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # /$1 # /$2
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "https://app.adailsilva.com.br"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, PATCH, DELETE, OPTIONS, HEAD"
    # nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type, Accept, Origin, Cache-Control"
    # nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    # nginx.ingress.kubernetes.io/cors-max-age: "3600"
  labels:
    app: nginx-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - k8s.adailsilva.com.br
      secretName: nginx-tls
  rules:
    - host: k8s.adailsilva.com.br
      http:
        paths:
          - path: /(.*) # /?(.*) # /k8s(/|$)(.*)
            pathType: ImplementationSpecific # ImplementationSpecific # Exact # Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
